--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,14 +2,19 @@
   height: 40px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   color: var(--text-color);
-  padding: 0 10px;
+  padding: 8px 20px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 100;
+}
+
+.tabs-wrapper{
+  display: flex;
+  flex-direction: row;
 }
 
 .title {
@@ -44,15 +49,20 @@
 }
 
 .new-tab-button {
-  color: var(--text-color);
+  color: white;
   background-color: transparent;
   border: none;
-  border-radius: 25px;
+  border-radius: 50%;
+  padding: 0px;
+  height: 24px;
+  width: 24px;
+  margin-right: 6px;
+  background-color: var(--primary-color);
   cursor: pointer;
   font-size: large;
 }
 .new-tab-button:hover {
-  font-size: x-large;
+  border: 1px solid var(--shadow);
 }
 
 .tabs-bar {
@@ -60,17 +70,16 @@
   align-items: center;
   overflow-x: auto;
   font-size: smaller;
-  margin-top: -2px;
+  margin-top: -6px;
   border-radius: 25px;
   background-color: var(--glass-bg);
+  border: 1px dotted var(--shadow-color);
 }
 
 .tab {
   padding: 6px 10px;
   border-radius: 25px;
   cursor: pointer;
-  display: flex;
-  flex-direction: row;
   overflow: hidden;
   text-overflow: ellipsis;
 }
